refactor: updated generated code
